--- a/css/main.css
+++ b/css/main.css
@@ -441,9 +441,13 @@ img {
   transition: 250ms var(--timing-fuction);
 }
 
-.nav-menu__link:hover,
-.nav-menu__link:focus {
+.nav-menu__link:hover, .nav-menu__link:focus {
   color: var(--theme-color);
+}
+
+.nav-menu__icon {
+  margin-right: 10px;
+  fill: currentColor;
 }
 
 .nav-menu--contacts {
@@ -460,11 +464,6 @@ img {
   display: -ms-flexbox;
   display: flex;
   color: var(--text-color);
-}
-
-.nav-menu__icon {
-  margin-right: 10px;
-  fill: currentColor;
 }
 
 .hero {
@@ -519,10 +518,6 @@ img {
   width: 270px;
 }
 
-.about-us-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .about-us-item__icon {
   display: -webkit-box;
   display: -webkit-flex;
@@ -560,6 +555,10 @@ img {
   color: var(--text-color);
 }
 
+.about-us-item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .profile {
   padding-bottom: 94px;
 }
@@ -574,10 +573,6 @@ img {
 .profile-item {
   position: relative;
   cursor: pointer;
-}
-
-.profile-item:not(:last-child) {
-  margin-right: 30px;
 }
 
 .profile-item__text {
@@ -600,6 +595,10 @@ img {
   -webkit-transition: 250ms var(--timing-fuction);
   -o-transition: 250ms var(--timing-fuction);
   transition: 250ms var(--timing-fuction);
+}
+
+.profile-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team {
@@ -1102,8 +1101,7 @@ img {
   transition: 250ms var(--timing-fuction);
 }
 
-.filter-links__btn:hover,
-.filter-links__btn:focus {
+.filter-links__btn:hover, .filter-links__btn:focus {
   background: var(--theme-color);
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
