--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,29 +10,34 @@
 .nav-menu {
   display: flex;
   margin-left: 93px;
-}
 
-.nav-menu__item:not(:last-child) {
-  margin-right: 50px;
-}
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
 
-.nav-menu__link {
-  position: relative;
+  &__link {
+    position: relative;
 
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.2em;
-  letter-spacing: 0.02em;
-  color: var(--headline-color);
-  transition: 250ms var(--timing-fuction);
-}
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.2em;
+    letter-spacing: 0.02em;
+    color: var(--headline-color);
+    transition: 250ms var(--timing-fuction);
+  }
 
-.nav-menu__link:hover,
-.nav-menu__link:focus {
-  color: var(--theme-color);
+  &__link:hover,
+  &__link:focus {
+    color: var(--theme-color);
+  }
+
+  &__icon {
+    margin-right: 10px;
+    fill: currentColor;
+  }
 }
 
 .nav-menu--contacts {
@@ -44,9 +49,4 @@
 
   display: flex;
   color: var(--text-color);
-}
-
-.nav-menu__icon {
-  margin-right: 10px;
-  fill: currentColor;
 }
