--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -11,18 +11,18 @@
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/hero.jpg');
   background-size: cover;
-}
 
-.hero__name {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.3em;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: #ffffff;
-}
+  &__name {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.3em;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
 
-.hero__btn {
-  margin-top: 40px;
+  &__btn {
+    margin-top: 40px;
+  }
 }
