--- a/sass/layout/_profile.scss
+++ b/sass/layout/_profile.scss
@@ -9,29 +9,29 @@
 .profile-item {
   position: relative;
   cursor: pointer;
+
+  &__text {
+    position: absolute;
+    transform: translate(-50%, -100%);
+    top: 100%;
+    left: 50%;
+
+    width: 100%;
+    padding: 27px 0;
+
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #ffffff;
+    background: rgba(47, 48, 58, 0.8);
+
+    transition: 250ms var(--timing-fuction);
+  }
 }
 
 .profile-item:not(:last-child) {
   margin-right: 30px;
-}
-
-.profile-item__text {
-  position: absolute;
-  transform: translate(-50%, -100%);
-  top: 100%;
-  left: 50%;
-
-  width: 100%;
-  padding: 27px 0;
-
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
-  background: rgba(47, 48, 58, 0.8);
-
-  transition: 250ms var(--timing-fuction);
 }
