--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -26,22 +26,22 @@
 
 .team-info {
   padding: 30px;
-}
 
-.team-info__name {
-  margin-bottom: 10px;
+  &__name {
+    margin-bottom: 10px;
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2em;
-  letter-spacing: 0.03em;
-  color: var(--headline-color);
-}
-.team-info__profession {
-  font-size: 16px;
-  line-height: 19px;
-  letter-spacing: 0.03em;
-  color: var(--text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.2em;
+    letter-spacing: 0.03em;
+    color: var(--headline-color);
+  }
+  &__profession {
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+  }
 }
 
 .team__social-link {
