--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -55,11 +55,11 @@
   cursor: pointer;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.modal-close:hover,
-:focus {
-  fill: var(--theme-color);
+  &:hover,
+  &:focus {
+    fill: var(--theme-color);
+  }
 }
 
 .modal-headline {
@@ -97,11 +97,11 @@
   border-radius: 4px;
   padding: 0 10px 0 42px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) linear border;
-}
 
-.form-input:focus {
-  outline: none;
-  border: 1px solid var(--theme-color);
+  &:focus {
+    outline: none;
+    border: 1px solid var(--theme-color);
+  }
 }
 
 .form-input:focus + svg {
@@ -114,15 +114,10 @@
   height: 120px;
   padding: 12px 16px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1) linear border;
-}
 
-.form-message:focus {
-  outline: none;
-  border: 1px solid var(--theme-color);
-}
-
-.form-message::placeholder {
-  color: #bababa;
+  &::placeholder {
+    color: #bababa;
+  }
 }
 
 .form-input-icon {
