--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -44,20 +44,20 @@
 .examples-item {
   width: 370px;
   transition: 250ms var(--timing-fuction);
-}
 
-.examples-item:hover,
-.examples-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 
-.examples-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
+  &:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
 
-.examples-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
+  &:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
 }
 
 .examples-thumb {
