--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,6 +8,10 @@
   display: flex;
 }
 
+.address-set {
+  margin-right: 70px;
+}
+
 .footer__logo {
   color: #ffffff;
 }
@@ -21,7 +25,6 @@
 }
 
 .address {
-  font-style: normal;
   font-size: 14px;
   line-height: 1.7em;
   letter-spacing: 0.03em;
@@ -37,7 +40,6 @@
 
 .footer-social {
   margin-top: 12px;
-  margin-left: 70px;
 
   &__headline {
     margin-bottom: 20px;
